# inventory_management_system

./: .env.example  .env.test.example  .env.test.local.example  .gitignore  README.md  alembic.ini  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
docker/: Dockerfile  Dockerfile.dev  entrypoint.sh
docs/: PREREQUISITES.md  README.md
docs/api/: README.md
docs/users/: README.md
migrations/postgresql/: README  env.py
migrations/postgresql/versions/: 2024_08_04_16061fde873990a3_create_item_and_category_tables.py  2024_08_08_1448-fa1c0d9d9f16_make_item_description_nullable_true.py  2024_08_09_1855-ed62223d9015_create_table_user.py
src/: main.py  settings.py
src/api/inventory/category/: crud.py  endpoints.py  exceptions.py  schemas.py
src/api/inventory/item/: crud.py  endpoints.py  exceptions.py  schemas.py
src/api/users/: auth.py  schemas.py
src/api/utils/: crud_base.py  exceptions.py  redis.py
src/db/postgresql/: __init__.py  base.py  models.py  session.py
tests/: __init__.py  conftest.py
tests/test_api/: conftest.py
tests/test_api/test_category/: test_endpoints.py
tests/test_api/test_item/: test_endpoints.py
tests/test_db/: test_postgresql.py
